--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,15 +1,92 @@
-body {
-    background-color: red;
+$text-color: #373C3D;
+$response-color-one: #FE5F55;
+$response-color-two: #FFF1C1;
+
+@mixin center-section{
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    color: $text-color;
+    margin: 0;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+
+    h1,h2,h3,h4,h5,h6{
+        margin: 0; 
+    }
+
+    h2{
+        font-size: 60px;
+        font-weight: 500;
+    }
+    h1{
+        font-size: 120px;
+    }
+}
+
+.site-header{
+    grid-row: 1;
+    grid-column: 1;
+    padding: 10px;
 }
 
 main {
-    flex: 2;
+    height: 100%; width: 100%;
+    grid-row: 1/3;
+    grid-column: 1/3;
+    // border: 2px solid green;
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(2,1fr);
+    .form-section{
+        padding: 10px;
+        grid-row: 1;
+        grid-column: 1;
+        align-self: center;
+        display: flex;
+        justify-content: center;
+        .url-input{
+            font-size: 48px;
+            font-weight: 300;
+            border: none;
+            border-bottom: 1px solid $text-color;
+            width: 500px;
+        }
+        .submit-button{
+            font-size: 24px;
+            border: none;
+        }
+    }
+    .text-section{
+        grid-row:2;
+        grid-column: 1;
+        overflow: scroll;
+        line-height: 25px;
+        font-size: 18px;
+        padding: 0 10px 0 10px;
+    }
+    .polarity-section{
+        grid-row:1; grid-column: 2;
+        background-color: $response-color-two;
+        @include center-section;
+
+    }
+    .subjective-section{
+        grid-row: 2;
+        grid-column: 2;
+        background-color: $response-color-one;
+        @include center-section;
+    }
+    .confidence{
+        font-size: 24px;
+    }
 }
 
-section {
-    max-width: 800px;
-    margin: 50px auto;
-}
