add url validation

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Text Anlzr</title>
 </head>
 
 <body>
@@ -21,7 +21,10 @@
             </form>
         </section>
         <section class='text-section'>
-            <p class='text-content'></p>
+            <p class='text-content'>
+                
+
+            </p>
 
         </section>
 
@@ -43,7 +46,7 @@
     </main>
 
     <footer>
-        <p>This is a footer</p>
+        <p>Site by Jerry Davidson</p>
     </footer>
 
 </body>
