--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -7,7 +7,6 @@ $response-color-two: #FFF1C1;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-evenly;
-    padding: 10px;
 }
 
 body {
@@ -17,7 +16,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: .5fr repeat(2,2fr) .5fr;
 
     h1,h2,h3,h4,h5,h6{
         margin: 0; 
@@ -31,34 +30,54 @@ body {
         font-size: 120px;
     }
 }
+footer{
+    grid-row: 4;
+    grid-column: 1/3;
+    background-color: #373C3D;
+    color: rgb(215, 223, 224);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p{
+        margin: 0;
+    }
+}
 
 .site-header{
     grid-row: 1;
     grid-column: 1;
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
 main {
     height: 100%; width: 100%;
-    grid-row: 1/3;
+    grid-row: 2/4;
     grid-column: 1/3;
     // border: 2px solid green;
     display: grid;
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: .5fr repeat(2,1fr);
     grid-template-columns: repeat(2,1fr);
     .form-section{
+        height: 100%;
         padding: 10px;
         grid-row: 1;
-        grid-column: 1;
+        grid-column: 1/3;
         align-self: center;
         display: flex;
-        justify-content: center;
+        .url-form{
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+        }
         .url-input{
+            width: 80%;
             font-size: 48px;
             font-weight: 300;
             border: none;
             border-bottom: 1px solid $text-color;
-            width: 500px;
         }
         .submit-button{
             font-size: 24px;
@@ -66,7 +85,7 @@ main {
         }
     }
     .text-section{
-        grid-row:2;
+        grid-row:2/4;
         grid-column: 1;
         overflow: scroll;
         line-height: 25px;
@@ -74,13 +93,13 @@ main {
         padding: 0 10px 0 10px;
     }
     .polarity-section{
-        grid-row:1; grid-column: 2;
+        grid-row:2; grid-column: 2;
         background-color: $response-color-two;
         @include center-section;
 
     }
     .subjective-section{
-        grid-row: 2;
+        grid-row: 3;
         grid-column: 2;
         background-color: $response-color-one;
         @include center-section;
@@ -90,3 +109,44 @@ main {
     }
 }
 
+@media only screen and (max-width: 1200px) {
+    body{
+        grid-template-columns: 1fr;
+        h1{
+            font-size: 60px;
+        }
+        h2{
+            font-size: 30px;
+        }
+    }
+    main{
+        grid-column: 1;
+        grid-template-columns: 1fr;
+        grid-template-rows: .5fr 2fr repeat(2,1fr);
+        
+        .form-section{
+      
+            grid-row: 1;
+            grid-column: 1;
+            .url-input{
+                font-size: 24px;
+            }
+        }
+        .text-section{
+            grid-row: 2;
+            overflow: scroll;
+        }
+        .text-content{
+            margin: 0;
+        }
+        .polarity-section{
+            grid-column: 1;
+            grid-row: 3;
+        }
+        .subjective-section{
+            grid-row: 4;
+            grid-column: 1;
+        }
+        
+    }
+}
