add fetchSet Jest test

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -21,10 +21,7 @@
             </form>
         </section>
         <section class='text-section'>
-            <p class='text-content'>
-                
-
-            </p>
+            <p class='text-content'></p>
 
         </section>
 
