run production build

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -16,18 +16,18 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: .5fr repeat(2,2fr) .5fr;
+    grid-template-rows: .5fr repeat(2,2fr) .2fr;
 
     h1,h2,h3,h4,h5,h6{
         margin: 0; 
     }
 
     h2{
-        font-size: 60px;
+        font-size: 50px;
         font-weight: 500;
     }
     h1{
-        font-size: 120px;
+        font-size: 100px;
     }
 }
 footer{
@@ -82,6 +82,8 @@ main {
         .submit-button{
             font-size: 24px;
             border: none;
+            border: none;
+            background-color: transparent;
         }
     }
     .text-section{
@@ -105,7 +107,7 @@ main {
         @include center-section;
     }
     .confidence{
-        font-size: 24px;
+        font-size: 30px;
     }
 }
 
@@ -113,10 +115,10 @@ main {
     body{
         grid-template-columns: 1fr;
         h1{
-            font-size: 60px;
+            // font-size: 80px;
         }
         h2{
-            font-size: 30px;
+            // font-size: 50px;
         }
     }
     main{
