--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,3 +1,6 @@
+@import './footer.scss';
+@import './header.scss';
+@import './form.scss';
 $text-color: #373C3D;
 $response-color-one: #FE5F55;
 $response-color-two: #FFF1C1;
@@ -30,27 +33,7 @@ body {
         font-size: 100px;
     }
 }
-footer{
-    grid-row: 4;
-    grid-column: 1/3;
-    background-color: #373C3D;
-    color: rgb(215, 223, 224);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-    p{
-        margin: 0;
-    }
-}
-
-.site-header{
-    grid-row: 1;
-    grid-column: 1;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-}
 
 main {
     height: 100%; width: 100%;
@@ -60,31 +43,6 @@ main {
     display: grid;
     grid-template-rows: .5fr repeat(2,1fr);
     grid-template-columns: repeat(2,1fr);
-    .form-section{
-        height: 100%;
-        padding: 10px;
-        grid-row: 1;
-        grid-column: 1/3;
-        align-self: center;
-        display: flex;
-        .url-form{
-            width: 100%;
-            display: flex;
-            justify-content: space-evenly;
-        }
-        .url-input{
-            width: 80%;
-            font-size: 48px;
-            font-weight: 300;
-            border: none;
-            border-bottom: 1px solid $text-color;
-        }
-        .submit-button{
-            font-size: 24px;
-            border: none;
-            border: none;
-            background-color: transparent;
-        }
     }
     .text-section{
         grid-row:2/4;
@@ -114,26 +72,12 @@ main {
 @media only screen and (max-width: 1200px) {
     body{
         grid-template-columns: 1fr;
-        h1{
-            // font-size: 80px;
-        }
-        h2{
-            // font-size: 50px;
-        }
     }
     main{
         grid-column: 1;
         grid-template-columns: 1fr;
         grid-template-rows: .5fr 2fr repeat(2,1fr);
         
-        .form-section{
-      
-            grid-row: 1;
-            grid-column: 1;
-            .url-input{
-                font-size: 24px;
-            }
-        }
         .text-section{
             grid-row: 2;
             overflow: scroll;
