--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,11 +1,15 @@
-@import './footer.scss';
-@import './header.scss';
-@import './form.scss';
-$text-color: #373C3D;
-$response-color-one: #FE5F55;
-$response-color-two: #FFF1C1;
+$text-color: #373c3d;
+$response-color-one: #fe5f55;
+$response-color-two: #fff1c1;
 
-@mixin center-section{
+
+@import "./footer.scss";
+@import "./header.scss";
+@import "./form.scss";
+// @import "./content.scss";
+
+
+@mixin center-section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -13,86 +17,49 @@ $response-color-two: #FFF1C1;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: $text-color;
     margin: 0;
     height: 100vh;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: .5fr repeat(2,2fr) .2fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 0.5fr repeat(2, 2fr) 0.2fr;
 
-    h1,h2,h3,h4,h5,h6{
-        margin: 0; 
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        margin: 0;
     }
 
-    h2{
+    h2 {
         font-size: 50px;
         font-weight: 500;
     }
-    h1{
+    h1 {
         font-size: 100px;
     }
 }
 
-
 main {
-    height: 100%; width: 100%;
+    height: 100%;
+    width: 100%;
     grid-row: 2/4;
     grid-column: 1/3;
-    // border: 2px solid green;
     display: grid;
-    grid-template-rows: .5fr repeat(2,1fr);
-    grid-template-columns: repeat(2,1fr);
-    }
-    .text-section{
-        grid-row:2/4;
-        grid-column: 1;
-        overflow: scroll;
-        line-height: 25px;
-        font-size: 18px;
-        padding: 0 10px 0 10px;
-    }
-    .polarity-section{
-        grid-row:2; grid-column: 2;
-        background-color: $response-color-two;
-        @include center-section;
-
-    }
-    .subjective-section{
-        grid-row: 3;
-        grid-column: 2;
-        background-color: $response-color-one;
-        @include center-section;
-    }
-    .confidence{
-        font-size: 30px;
-    }
+    grid-template-rows: 0.5fr repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 @media only screen and (max-width: 1200px) {
-    body{
+    body {
         grid-template-columns: 1fr;
     }
-    main{
+    main {
         grid-column: 1;
         grid-template-columns: 1fr;
-        grid-template-rows: .5fr 2fr repeat(2,1fr);
-        
-        .text-section{
-            grid-row: 2;
-            overflow: scroll;
-        }
-        .text-content{
-            margin: 0;
-        }
-        .polarity-section{
-            grid-column: 1;
-            grid-row: 3;
-        }
-        .subjective-section{
-            grid-row: 4;
-            grid-column: 1;
-        }
-        
+        grid-template-rows: 0.5fr 2fr repeat(2, 1fr);
     }
 }
