change site title size

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -20,7 +20,7 @@
 
     <header class='site-header'>
         <div class="">
-            <h3>Text Anlzr</h3>
+            <h2>Article Analyzer</h2>
         </div>
     </header>
     <main>
