--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,10 +1,6 @@
-@use './style-variables';
-@import "./footer.scss";
-@import "./header.scss";
-@import "./form.scss";
-@import "./content.scss";
-
-
+$text-color: #373c3d;
+$response-color-one: #fe5f55;
+$response-color-two: #fff1c1;
 
 @mixin center-section {
     display: flex;
@@ -12,6 +8,13 @@
     align-items: flex-start;
     justify-content: space-evenly;
 }
+@import "./_footer.scss";
+@import "./_header.scss";
+@import "./_form.scss";
+@import "./_content.scss";
+
+
+
 
 body {
     font-family: "Roboto", sans-serif;
