--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -6,13 +6,13 @@
     <title>Text Anlzr</title>
     <script>
         // Check that service workers are supported
-        // if ('serviceWorker' in navigator) {
-        //     // Use the window load event to keep the page load performant
-        //     console.log('hey I am your service worker');
-        //     window.addEventListener('load', () => {
-        //         navigator.serviceWorker.register('/service-worker.js');
-        //     });
-        // }
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            console.log('hey I am your service worker');
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
     // </script>
 </head>
 
